New labels on buttons.

--- a/stream/templates/stream/home.html
+++ b/stream/templates/stream/home.html
@@ -10,8 +10,8 @@
         <h1>Want to share something?</h1><br>
         <a href="{% url 'new_post' %}" class="button text">Text</a>
         <a href="{% url 'home' %}" class="button image">Image</a>
-        <a href="{% url 'home' %}" class="button image">Video</a>
-        <a href="{% url 'home' %}" class="button image">Audio</a>
+        <a href="{% url 'home' %}" class="button video">Video</a>
+        <a href="{% url 'home' %}" class="button audio">Audio</a>
     </div>
     {% endif %}
 
