--- a/stream/templates/stream/home.html
+++ b/stream/templates/stream/home.html
@@ -15,8 +15,8 @@
     </div>
     {% endif %}
 
-    <hr>
 
+    <h1 class="posts_heading">Posts</h1>
     {% for post in posts %}
     <div class="card">
         <a href="{% url 'home' %}">
