Title blocks were in wrong place for log in and register templates.

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,6 +1,8 @@
 {% extends 'base_welcome.html' %}
 {% load static %}
 
+{% block title %}Log In{% endblock %}
+
 {% block login_reg %}
 <div class="card" id="login_form">
 	<h1>LOG IN</h1>
