--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -1,11 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %}
-Stream
-{% endblock %}
+{% block title %}Stream{% endblock %}
 
 {% block content %}
-	<h2>Welcome, 
+	<h2>Welcome,
 		{% if user.first_name == '' %}
 			{{ user.username }}.
 		{% else %}
