--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,6 +1,8 @@
 {% extends 'base_welcome.html' %}
 {% load static %}
 
+{% block title %}Register{% endblock %}
+
 {% block login_reg %}
 <div class="card" id="login_form">
 	<h1>REGISTER</h1>
