--- a/stream/static/stream/css/stream.css
+++ b/stream/static/stream/css/stream.css
@@ -222,7 +222,8 @@ header input[type='text']::placeholder {
 /* ===== SHARE CARD ===== */
 
 .share_card {
-    padding: 0px 0px 5px 25px;
+    padding-left: 17.5px;
+    padding-right: 0px;
     float: none;
     /* margin-bottom: 20px; */
 }
@@ -233,7 +234,8 @@ header input[type='text']::placeholder {
     width: 15%;
     /* float: left; */
     margin-top: 5px;
-    margin-right: 2.5%;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .share_card h1 {
