--- a/account/templates/account/edit_profile.html
+++ b/account/templates/account/edit_profile.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block stream %}
-    <form method="post">
+    <form method="post" class="edit_profile">
     {% csrf_token %}
     {{ user_form.as_p }}
     {{ profile_form.as_p }}
