--- a/stream/static/stream/css/stream.css
+++ b/stream/static/stream/css/stream.css
@@ -35,10 +35,11 @@ header {
     position: fixed;
     margin: 0px;
     /* margin-top: -63px; */
-    padding: 10px 0;
+    padding: 15px 0;
 
-    background-color: #4D9DE0;
-    border-bottom: 3px solid rgba(0, 0, 0, 0.2);
+    background-color: #ed3d51;
+	box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
+    /* border-bottom: 3px solid rgba(0, 0, 0, 0.2); */
 }
 
 main {
@@ -58,18 +59,16 @@ h1 {
 
     font-size: 32px;
     color: white;
-    background-color: white;
-    color: transparent;
-    -webkit-background-clip: text;
-    background-clip: text;
+	text-shadow: 0px 0px 10px rgba(0,0,0,0.25);
+    /* background-color: white; */
+    /* color: transparent; */
+    /* -webkit-background-clip: text;
+    background-clip: text; */
 }
 
 .logo:hover {
     /* look at doing other browsers */
-    background-image: linear-gradient(to bottom, #fff, #fff, #4D9DE0);
-    color: transparent;
-    -webkit-background-clip: text;
-    background-clip: text;
+    text-shadow: 0px 0px 10px rgba(0,0,0,0.5);
 }
 
 /* ===== NAV BAR ===== */
@@ -91,11 +90,13 @@ ul a {
     font-size: 12px;
     background-color: rgba(0, 0, 0 , 0.2);
     border-radius: 5px;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+	border: solid 2px rgba(0,0,0,0);
+    /* border-bottom: 2px solid rgba(0, 0, 0, 0.2); */
 }
 
 ul a:hover {
     background-color: rgba(0, 0, 0, 0.3);
+	box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
 }
 
 ul a:focus {
@@ -116,9 +117,9 @@ header input[type='text'] {
 	margin: 2.5px auto 0px 0px;
 	padding: 3.5px 12px;
 
-	background-color: rgba(0, 0, 0, 0.1);
+	background-color: rgba(0, 0, 0, 0.2);
 
-	border: 2px solid rgba(0, 0, 0, 0.2);
+	border: 2px solid rgba(0, 0, 0, 0);
 	border-radius: 5px;
 	outline: none;
 }
@@ -126,7 +127,8 @@ header input[type='text'] {
 header input[type='text']:focus,
 header input[type='text']:hover {
     transition: 0.75s ease;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.3);
+	box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
 }
 
 header input[type='text']::placeholder {
@@ -171,7 +173,7 @@ header input[type='text']::placeholder {
 
 #content_main .content_heading {
     display: inline-block;
-    margin: 30px auto 5px 40px;
+    margin: 40px auto 15px 40px;
 }
 
 /* ===== POSTS ===== */
@@ -190,17 +192,18 @@ header input[type='text']::placeholder {
 } */
 
 .dp {
-    height: 50px; width: 50px;
+    height: 56px; width: 56px;
 
     margin: -8px 0px 0px -90px;
     float: left;
 
     background-color: #CDCDCD;
-    border: 3px solid #4D9DE0;
-    border-radius: 5px;
+    /* border: 3px solid #4D9DE0; */
+    border-radius: 50%;
 }
 
 .dp:hover {
+	height: 50px; width: 50px;
     transition: ease 0.75s;
     border: 3px solid #456990;
 }
@@ -248,16 +251,16 @@ header input[type='text']::placeholder {
 /* ===== SHARE CARD ===== */
 
 .share_card {
-    padding-left: 17.5px;
-    padding-right: 0px;
+    padding: auto 17.5px;
     float: none;
+	margin-top: 40px;
     margin-bottom: 10px;
 }
 
 .share_card .button {
     text-align: center;
     display: inline-block;
-    width: 15%;
+    width: 69px;
     /* float: left; */
     margin-top: 5px;
     margin-left: 1%;
