--- a/account/static/account/css/base.css
+++ b/account/static/account/css/base.css
@@ -75,9 +75,8 @@ IS LINKED TO. WILL CONNECT THIS TO A PYTHON SCRIPT.
 	padding: 7.5px 15px 14px 15px;
 
 	background-color: rgba(255, 255, 255, 1);
-	border-radius: 5px;
+	border-radius: 0px 5px 5px 5px;
 
-	box-shadow: 0 0 25px #000000;
 	/* border-top: 3px solid rgba(0, 0, 0, 0.2);
 	border-bottom: 3px solid rgba(0, 0, 0, 0.2); */
 }
