--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -25,25 +25,30 @@
 
 <div id="content_all">
 	<div id="cover">
-		<h2>{{ cur_user.username }}</h2>
+		<img src="{% static 'stream/img/dp/admin.jpg' %}">
+		{% if cur_user.first_name|length > 0 %}
+		<h2>@{{ cur_user.username }}</h2><br>
 		<h1>{{ cur_user.first_name }} {{ cur_user.last_name }}</h1>
+		{% else %}
+		<h2>{{ cur_user.first_name }} {{ cur_user.last_name }}</h2><br>
+		<h1>@{{ cur_user.username }}</h1>
+		{% endif %}
 	</div>
     <div id="content_left">
         <p> </p>
     </div>
     <div id="content_main">
-		<h1 class="content_heading">Posts</h1>
 		{% for post in posts %}
 			{% if post.posted_by.username == cur_user.username %}
+			<a href="{% url 'home' %}" class="dp">
+				<img src="{% static 'stream/img/dp/admin.jpg' %}">
+			</a>
 		    <div class="card">
 		        <!-- {% if request.user not in user.followers.all %}
 		                Follow
 		        {% else %}
 		            Unfollow
 		        {% endif %} -->
-		        <a href="{% url 'home' %}">
-		            <img src="{% static 'stream/img/dp/admin.jpg' %}" class="dp">
-		        </a>
 		        <a href="{% url 'home' %}">
 		            <h2>
 						<b>{{ post.posted_by.username }}</b>{% if post.posted_by.first_name|length > 0 %}: {{ post.posted_by.first_name }} {{ post.posted_by.last_name }}{% endif %}
