--- a/stream/static/stream/css/stream.css
+++ b/stream/static/stream/css/stream.css
@@ -40,6 +40,7 @@ header {
     background-color: #ed3d51;
 	box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
     /* border-bottom: 3px solid rgba(0, 0, 0, 0.2); */
+	z-index: 100;
 }
 
 main {
@@ -162,7 +163,7 @@ header input[type='text']::placeholder {
     width: 40%;
     /* background-color: #EFEFEF; */
     /* padding-top: 30px; */
-    padding: 0px 5%;
+    padding: 50px 5%;
 }
 
 #content_right {
@@ -172,18 +173,19 @@ header input[type='text']::placeholder {
 }
 
 #content_main .content_heading {
-    display: inline-block;
-    margin: 40px auto 15px 40px;
+    display: block;
+    margin: 40px auto 30px 40px;
 }
 
 /* ===== POSTS ===== */
 
 .card {
     box-shadow: 0 0 5px rgba(0,0,0,0.3);
-    margin: 15px 10px 30px 65px;
+    margin: 0px 10px 40px 65px;
     /* border: 3px solid rgba(0, 0, 0, 0.2); */
 
     padding: 5px 25px;
+	position: relative;
 }
 
 /* .card:hover {
@@ -193,20 +195,29 @@ header input[type='text']::placeholder {
 
 .dp {
     height: 56px; width: 56px;
-
-    margin: -8px 0px 0px -90px;
+	margin: 0px -10px 0px 9px;
     float: left;
-
-    background-color: #CDCDCD;
-    /* border: 3px solid #4D9DE0; */
-    border-radius: 50%;
+	z-index: 0;
+	position: relative;
+	display: inline-block;
 }
 
+.dp img {
+	height: 100%;
+	width: 100%;
+
+	border-radius: 5px 0px 0px 5px;
+	box-shadow: 0 0 5px rgba(0,0,0,0.3);
+	background-color: #CDCDCD;
+	/* border: 3px solid #4D9DE0; */
+}
+
+/*
 .dp:hover {
 	height: 50px; width: 50px;
     transition: ease 0.75s;
     border: 3px solid darkgrey;
-}
+} */
 
 .card h2, .card h3 {
     display: inline-block;
@@ -253,7 +264,7 @@ header input[type='text']::placeholder {
 .share_card {
     padding: auto 17.5px;
     float: none;
-	margin-top: 40px;
+	margin-top: 0px;
     margin-bottom: 10px;
 }
 
