--- a/stream/static/stream/css/stream.css
+++ b/stream/static/stream/css/stream.css
@@ -169,7 +169,15 @@ header input[type='text']::placeholder {
 #content_right {
     display: inline-block;
     width: 25%;
+	margin-top: 20px;
     /* background-color: rgba(0, 0, 0, 0.2); */
+}
+
+#content_right .card {
+	margin: 0;
+	width: 60%;
+	padding: 20px 25px 10px;
+	border-radius: 5px;
 }
 
 #content_main .content_heading {
