--- a/stream/templates/base_stream.html
+++ b/stream/templates/base_stream.html
@@ -17,6 +17,11 @@
         {% endblock %}
     </div>
     <div id="content_right">
-        <p> </p>
+		<h1 class="content_heading">Users</h1>
+		<div class="card">
+			{% for user in users %}
+			<p>{{ user.username }}</p>
+			{% endfor %}
+		</div>
     </div>
 {% endblock %}
